2008-01-29  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/ctx.c (munge_ctx_create): Fixed bug (found by coverity)
	  where ctx->error_str could be read before it was initialized.

	* src/libcommon/str.c, src/libcommon/str.h (strcatf):
	  Fixed bug (found by coverity) where strcatf()'s size_t return type
	  prevented the error code of -1 from being returned to the caller.
	* src/munged/crypto.c (openssl_log_msg):
	  Specified void cast to discard return value from strcatf().

2008-01-28  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_hash_create, _gids_user_to_uid):
	  Fixed bug (found by coverity) where _gids_user_to_uid() returned a
	  signed int identifying the uid (on success) or -1 (on error).  This
	  value was first assigned directly to an unsigned uid_t and then
	  tested for error.  But since the var was unsigned, the test would
	  always eval to true.

2008-01-09  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

2007-10-10  Chris Dunlap  <cdunlap@llnl.gov>

	* DISCLAIMER.LLNS, DISCLAIMER.UC: Updated.

2007-10-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Updated to conman r806.
	  Added support for Debian Etch & Ubuntu Edgy.
	  Renamed OPTIONS to DAEMON_ARGS.  Renamed SERVICE_NAME to SCRIPT_NAME.
	  Redirected ERRMSG to stderr.  Forced removal of PIDFILE on stop.
	  Replaced query_exec() with type.  Added log_init() and log_fini().
	  Added check for "dead" status if process not found & pidfile exists.
	* src/etc/munge.sysconfig: Renamed OPTIONS to DAEMON_ARGS.

2007-10-05  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright info for LLNS.

2007-10-03  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Added openssl-devel, bzip2-devel, and zlib-devel
	  BuildRequires for mock builds.

2007-09-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Fixed bug with RH_SUBSYS referencing the init
	  script name instead of the executable daemon name.
