@@ -1,3 +1,8 @@
+2008-01-30  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munged/path.c (path_dirname): Changed behavior to return EINVAL
+	  error if src is NULL.
+
 2008-01-29  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/libcommon/ctx.c (munge_ctx_create): Fixed bug (found by coverity)
